# mynah-stt

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
mynah/: __init__.py  __main__.py  app.py  cli.py
mynah/config/: glossary.py  replacements.py  settings.py
mynah/core/: audio.py  denoise.py  diarize.py  format.py  model_cache.py  pipeline.py  record.py  transcribe.py
mynah/tui/: app.css  app.py  clipboard.py  widgets.py
mynah/tui/screens/: editor.py  main.py  progress.py  record.py  result.py  settings.py
tests/: conftest.py  test_clipboard.py  test_format.py  test_glossary.py  test_model_cache.py  test_record.py  test_replacements.py  test_settings.py
